--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <vavr.version>0.10.2</vavr.version>
-        <vavr-jackson.version>0.10.0</vavr-jackson.version>
+        <fasterxml-jackson.version>2.9.10</vavr-jackson.version>
         <spock-core.version>2.1-groovy-3.0</spock-core.version>
         <maven-compiler.version>3.8.0</maven-compiler.version>
         <frontend-maven.version>1.9.1</frontend-maven.version>
@@ -41,9 +41,9 @@
             <version>${vavr.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.vavr</groupId>
-            <artifactId>vavr-jackson</artifactId>
-            <version>${vavr-jackson.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${fasterxml-jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.spockframework</groupId>
